ICU-8268 inefficient use of Long, Integer, Character constructors.
X-SVN-Rev: 30734