@@ -1272,7 +1272,7 @@ public class MessageFormat extends UFormat {
             String key = null;
             if(args!=null) {
                 argNumber=part.getValue();  // ARG_NUMBER
-                argId = new Integer(argNumber);
+                argId = Integer.valueOf(argNumber);
             } else {
                 if(part.getType()==MessagePattern.Part.Type.ARG_NAME) {
                     key=msgPattern.getSubstring(part);
@@ -1617,7 +1617,7 @@ public class MessageFormat extends UFormat {
                 int argNumber=part.getValue();  // ARG_NUMBER
                 if (dest.attributes != null) {
                     // We only need argId if we add it into the attributes.
-                    argId = new Integer(argNumber);
+                    argId = Integer.valueOf(argNumber);
                 }
                 if(0<=argNumber && argNumber<args.length) {
                     arg=args[argNumber];
